samples/_failures_safe/1761658035_ee2275_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad2fd8a4.c: In function ‘main’:
./samples/SAFE/__tmp_ad2fd8a4.c:154:9: error: expected expression at end of input
  154 |         buffer_free(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_ad2fd8a4.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ad2fd8a4.c:154:9: error: expected declaration or statement at end of input
